<resources>
    <string name="app_name">time</string>
    <string name="calculate">Calculate</string>
    <string name="cost_of_service">Type your overall cost here</string>
    <string name="how_was_your_service">how was your service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>